--- a/proyecto_front/src/App.css
+++ b/proyecto_front/src/App.css
@@ -1,31 +1,25 @@
+/* Elimina márgenes y padding innecesarios del contenedor raíz */
 #root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+  margin: 0;
+  padding: 0;
+  text-align: initial;
+width: 100vw;
+overflow-x: hidden;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+/* Asegúrate de que el contenedor principal no limite el ancho */
+.main-content {
+  max-width: 100%;
+  margin: 0;
+  padding: 0;
+  text-align: initial;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+
+
+
+
+
 
 @media (prefers-reduced-motion: no-preference) {
   a:nth-of-type(2) .logo {
