--- a/proyecto_front/src/assets/styles/components/header.scss
+++ b/proyecto_front/src/assets/styles/components/header.scss
@@ -50,11 +50,11 @@
         transition: color 0.3s;
 
         &.active {
-          border-bottom: 2px solid #9e78cf;
+          border-bottom: 2px solid #666666;
         }
 
         &:hover {
-          color: #9e78cf;
+          color: #666666;
         }
       }
     }
