--- a/proyecto_front/src/assets/styles/views/productDetail.scss
+++ b/proyecto_front/src/assets/styles/views/productDetail.scss
@@ -83,3 +83,17 @@
     }
   }
 }
+
+.added-message {
+  margin-top: 1rem;
+  color: green;
+  font-weight: bold;
+  animation: fadeOut 3s forwards;
+
+  @keyframes fadeOut {
+    0% { opacity: 1; }
+    90% { opacity: 1; }
+    100% { opacity: 0; }
+  }
+}
+
