--- a/proyecto_front/src/App.css
+++ b/proyecto_front/src/App.css
@@ -15,6 +15,21 @@ overflow-x: hidden;
   text-align: initial;
 }
 
+html, body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
+.main-content {
+  flex: 1;
+}
 
 
 
