--- a/proyecto_front/src/assets/styles/views/login.scss
+++ b/proyecto_front/src/assets/styles/views/login.scss
@@ -39,8 +39,8 @@
   button {
     width: 100%;
     padding: 0.8rem;
-    background-color: #28a745;
-    color: white;
+    background-color: #1d1825;
+    color: #ffffff;
     font-weight: bold;
     font-size: 1rem;
     border: none;
@@ -49,7 +49,23 @@
     transition: background-color 0.2s ease;
 
     &:hover {
-      background-color: #218838;
+      background-color: #666666;
+    }
+  }
+}
+
+.register-link {
+  text-align: center;
+  margin-top: 1rem;
+  font-size: 0.9rem;
+
+  a {
+    color: #1d1825;
+    text-decoration: none;
+    font-weight: bold;
+
+    &:hover {
+      text-decoration: underline;
     }
   }
 }
