--- a/proyecto_front/src/assets/styles/views/register.scss
+++ b/proyecto_front/src/assets/styles/views/register.scss
@@ -39,7 +39,7 @@
   button {
     width: 100%;
     padding: 0.8rem;
-    background-color: #007bff;
+    background-color: #1d1825;
     color: #ffffff;
     font-weight: bold;
     font-size: 1rem;
@@ -49,7 +49,7 @@
     transition: background-color 0.2s ease;
 
     &:hover {
-      background-color: #0056b3;
+      background-color: #666666;
     }
   }
 }
