Changes in cart & checkout styles, remove console.logs

--- a/proyecto_front/src/assets/styles/views/cart.scss
+++ b/proyecto_front/src/assets/styles/views/cart.scss
@@ -88,7 +88,7 @@
     }
 
     .remove {
-      background-color: #dc3545;
+      background-color: #741b24;
       color: #ffffff;
       border: none;
       padding: 0.6rem 1rem;
@@ -98,7 +98,7 @@
       margin-left: 1vw;
 
       &:hover {
-        background-color: #c82333;
+        background-color: #741b24c8;
       }
     }
   }
@@ -118,7 +118,7 @@
     }
 
     .checkout {
-      background-color: #28a745;
+      background-color: #1d1825;
       color: #ffffff;
       border: none;
       padding: 0.8rem 1.5rem;
@@ -127,7 +127,7 @@
       cursor: pointer;
 
       &:hover {
-        background-color: #218838;
+        background-color: #666666;
       }
     }
   }
