--- a/proyecto_front/src/assets/styles/views/checkout.scss
+++ b/proyecto_front/src/assets/styles/views/checkout.scss
@@ -49,14 +49,14 @@
     button {
       padding: 0.9rem;
       font-size: 1rem;
-      background-color: #007bff;
+      background-color: #1d1825;
       color: #ffffff;
       border: none;
       border-radius: 6px;
       cursor: pointer;
 
       &:hover {
-        background-color: #0056b3;
+        background-color: #666666;
       }
     }
   }
